syntax = "proto3";

package Protobuf;

message Map {
  Pos2D dimensions = 1;
  repeated Line obstacles = 2;
}

message Line {
    Pos2D a = 1;
    Pos2D b = 2;
}

message Pos2D {
    float x = 1;
    float y = 2;
}

message Boid {
  Pos2D position = 1;
  Pos2D direction = 2;
  Pos2D cohesion = 3;
  Pos2D alignment = 4;
  Pos2D separation = 5;
  Pos2D avoidance = 6;
}

message Flock {
    repeated Boid boids = 1; // max 1000
}

message Parameters {
    float separationScale = 1; // How prominent is separation factor. From 0 to 2, default to 1
    float cohesionScale = 2; // How prominent is cohesion factor. From 0 to 2, default to 1
    float alignmentScale = 3; // How prominent is alignment factor. From 0 to 2, default to 1
    float avoidanceScale = 4; // How prominent is avoidance factor. From 0 to 2, default to 1

    uint32 visionDistance = 5; // How far agents perceive local flock mates. Min 0
    uint32 obstacleDistance = 6; // How far agents perceive obstacles. Min 0
    uint32 separationDistance = 7; // Distance from which an agent tries to avoid an other one

    uint32 maxLocalFlockmates = 8; // Max nb of peers a boid can use to make a decision
}

message Input {
    Map map = 1;
    Flock flock = 2;
    int32 simulationDurationSec = 3; // max 10
    int32 imagesPerSecond = 4; // max 60
    Parameters parameters = 5;
}

message Simulation {
    Flock flock = 1;
    float elapsedTimeSecond = 2;

    // for debugging purposes
    repeated Pos2D obstaclesNormalVectors = 3;
    repeated Pos2D obstaclesPosition = 4;
}

message Output {
    repeated Simulation simulations = 1;
}
